--- a/src/main/resources/templates/addEmp.html
+++ b/src/main/resources/templates/addEmp.html
@@ -35,11 +35,11 @@
 </nav>
 <!--Navbar-->
 
-<div class="container p-5">
+<div class="container p-5 shadow-lg ">
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <div class="card">
-        <div class="card-body">
+      <div class=" card  shadow-lg">
+        <div class=" card-body shadow-lg " style=" background-color:ivory; border:2px solid black ">
           <h4 class="text-center text-primary">Add Emp</h4>
           <form th:action="@{/register}" method="Post">
 
