--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,12 +22,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-white" href="#" >Home <span class="sr-only">(current)</span></a>
             </li>
 
 
             <li class="nav-item">
-                <a class="nav-link disabled" href="addemp">Add EMP</a>
+                <a class="nav-link disabled text-white" href="addemp">Add EMP</a>
             </li>
         </ul>
 
@@ -41,9 +41,9 @@
     <th:block th:text="${#session.removeAttribute('msg')}"></th:block>
 </div>
 
-<div class="container p-5">
+<div class="container p-5 ">
 
-    <table class="table table-striped">
+    <table class="table table-striped shadow-lg p-3 mb-5 bg-body rounded">
         <thead class="bg-primary text-white">
         <tr>
             <th scope="col">Id</th>
